step 1 in moving to react site

--- a/Revised Code CoPilot/CopilotBudgetApp.html
+++ b/Revised Code CoPilot/CopilotBudgetApp.html
@@ -3,6 +3,11 @@
 <head>
     <title>Hello Julia!</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        body {
+            background-color: #F1EEF2;
+        }
+    </style>
 </head>
 <body>
     <header>
